--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
