--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
