--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/gif.tsx",
+    "src/components/debounce.js",
+    "src/components/loader.js"
+  ],
   "exclude": ["node_modules", ".next", ".vercel", "out"]
 }
